# httpserver

./: .gitignore  CMakeLists.txt  CMakePresets.json  notes.md
include/: path.h  utils.h
src/: main.cpp  path.cpp  utils.cpp
